After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761919 - check: fix unused parameter
check: fix unused parameter
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-12 10:42 UTC by Håvard Graff (hgr)
Modified: 2016-02-12 16:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (704 bytes, patch)
2016-02-12 10:42 UTC, Håvard Graff (hgr)
needs-work Details | Review
check: fix unused paramater (793 bytes, patch)
2016-02-12 14:20 UTC, Stian Selnes (stianse)
committed Details | Review

Description Håvard Graff (hgr) 2016-02-12 10:42:11 UTC
Created attachment 320956 [details] [review]
patch

Fixes a warning.
Comment 1 Tim-Philipp Müller 2016-02-12 10:51:47 UTC
Comment on attachment 320956 [details] [review]
patch

I'd rather use G_GNUC_UNUSED in the parameter declaration, or make use of it somewhere.
Comment 2 Stian Selnes (stianse) 2016-02-12 14:20:05 UTC
Created attachment 320986 [details] [review]
check: fix unused paramater
Comment 3 Tim-Philipp Müller 2016-02-12 16:42:15 UTC
Thanks!

commit 9d56c0e397a3c52f225f706522e735f779962a55
Author: Stian Selnes <stian@pexip.com>
Date:   Fri Feb 12 15:12:43 2016 +0100

    check: fix unused parameter compiler warning
    
    https://bugzilla.gnome.org/show_bug.cgi?id=761919