check: fix unused parameter compiler warning

https://bugzilla.gnome.org/show_bug.cgi?id=761919